config-root/namespaces/jx-production/h5-test/h5-test-ingress.yaml
# Source: h5-test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    meta.helm.sh/release-name: 'h5-test'
  name: h5-test
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: h5-test
            port:
              number: 80
        path: /
    host: h5-test-jx-production.saas-ops.finline.app
  tls:
  - hosts:
    - h5-test-jx-production.saas-ops.finline.app
    secretName: "jx-privkey"
